Updated kotlin to 1.7.10 and added "exclude all" data-extraction-rules in TextRoundedBackgroundKotlin

--- a/TextRoundedBackgroundKotlin/lib/build.gradle
+++ b/TextRoundedBackgroundKotlin/lib/build.gradle
@@ -18,11 +18,11 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion rootProject.compileSdkVersion
+    compileSdkVersion 32
 
     defaultConfig {
-        minSdkVersion rootProject.minSdkVersion
-        targetSdkVersion rootProject.targetSdkVersion
+        minSdkVersion 15
+        targetSdkVersion 32
     }
 
     buildTypes {
@@ -35,7 +35,6 @@ android {
 }
 
 dependencies {
-    implementation "androidx.core:core-ktx:${ktxVersion}"
-    implementation "androidx.appcompat:appcompat:$androidxVersion"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "androidx.core:core-ktx:1.8.0"
+    implementation "androidx.appcompat:appcompat:1.4.2"
 }
