--- a/TextRoundedBackgroundKotlin/app/build.gradle
+++ b/TextRoundedBackgroundKotlin/app/build.gradle
@@ -19,12 +19,12 @@ apply plugin: 'kotlin-android'
 
 
 android {
-    compileSdkVersion rootProject.compileSdkVersion
+    compileSdkVersion 32
 
     defaultConfig {
         applicationId "com.android.example.text.styling.roundedbg"
-        minSdkVersion rootProject.minSdkVersion
-        targetSdkVersion rootProject.targetSdkVersion
+        minSdkVersion 15
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
     }
@@ -38,5 +38,5 @@ android {
 
 dependencies {
     implementation project(':lib')
-    implementation "androidx.appcompat:appcompat:$androidxVersion"
+    implementation "androidx.appcompat:appcompat:1.4.2"
 }
