--- a/TextStylingKotlin/app/build.gradle
+++ b/TextStylingKotlin/app/build.gradle
@@ -18,12 +18,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion rootProject.compileSdkVersion
+    compileSdkVersion 32
 
     defaultConfig {
         applicationId "com.android.example.text.styling"
-        minSdkVersion rootProject.minSdkVersion
-        targetSdkVersion rootProject.targetSdkVersion
+        minSdkVersion 15
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -42,20 +42,20 @@ android {
 }
 
 dependencies {
-    implementation "androidx.appcompat:appcompat:$appCompat"
-    implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
+    implementation "androidx.appcompat:appcompat:1.4.2"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
 
     // Android KTX
-    implementation "androidx.core:core-ktx:$androidktx"
+    implementation "androidx.core:core-ktx:1.8.0"
 
     // Dependencies for local unit tests
-    testImplementation "junit:junit:$junitVersion"
+    testImplementation "junit:junit:4.13.2"
 
-    androidTestImplementation "org.mockito:mockito-core:$mockitoVersion"
-    androidTestImplementation "androidx.test:runner:$runnerVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
-    androidTestImplementation "com.google.dexmaker:dexmaker:$dexmakerVersion"
-    androidTestImplementation "com.google.dexmaker:dexmaker-mockito:$dexmakerMockitoVersion"
+    androidTestImplementation "org.mockito:mockito-core:4.6.1"
+    androidTestImplementation "androidx.test:runner:1.4.0"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+    androidTestImplementation "com.google.dexmaker:dexmaker:1.2"
+    androidTestImplementation "com.google.dexmaker:dexmaker-mockito:1.2"
 
 }
 
