--- a/WindowInsetsAnimation/app/src/main/AndroidManifest.xml
+++ b/WindowInsetsAnimation/app/src/main/AndroidManifest.xml
@@ -20,11 +20,13 @@
 
     <application
         android:allowBackup="false"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Chat"
-        tools:ignore="AllowBackup,DataExtractionRules">
+        tools:ignore="UnusedAttribute">
 
         <activity
             android:name="com.google.android.samples.insetsanimation.MainActivity"
