--- a/WindowManager/app/src/main/AndroidManifest.xml
+++ b/WindowManager/app/src/main/AndroidManifest.xml
@@ -20,10 +20,13 @@
 
     <application
         android:allowBackup="false"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="false"
+        android:icon="@drawable/ic_android_green_320dp"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup,DataExtractionRules,MissingApplicationIcon">
+        tools:ignore="UnusedAttribute">
         <activity
             android:name=".WindowDemosActivity"
             android:exported="true"
