--- a/WindowManager/app/build.gradle
+++ b/WindowManager/app/build.gradle
@@ -46,8 +46,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
 
-    def window_version = '1.0.0'
-    implementation "androidx.window:window:$window_version"
+    implementation "androidx.window:window:1.0.0"
 
     androidTestImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
