--- a/EmojiCompat/app/build.gradle
+++ b/EmojiCompat/app/build.gradle
@@ -17,17 +17,13 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
-ext {
-    supportLibVersion = '26.0.0'
-}
-
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.example.android.emojicompat"
         minSdkVersion 19
-        targetSdkVersion 32
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -40,13 +36,13 @@ android {
     }
     namespace 'com.example.android.emojicompat'
     configurations.all {
-        resolutionStrategy.force "com.android.support:support-annotations:$supportLibVersion"
+        resolutionStrategy.force "com.android.support:support-annotations:26.0.0"
     }
 }
 
 dependencies {
     // Support Libraries
-    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.emoji:emoji:1.1.0'
     implementation 'androidx.emoji:emoji-appcompat:1.1.0'
     implementation 'androidx.emoji:emoji-bundled:1.1.0'
@@ -56,7 +52,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation 'androidx.test:rules:1.4.0'
     androidTestImplementation 'androidx.test:runner:1.4.0'
-    implementation "androidx.core:core-ktx:1.8.0"
+    implementation "androidx.core:core-ktx:1.9.0"
 }
 repositories {
     mavenCentral()
