--- a/TextRoundedBackgroundKotlin/app/build.gradle
+++ b/TextRoundedBackgroundKotlin/app/build.gradle
@@ -19,12 +19,12 @@ apply plugin: 'kotlin-android'
 
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.android.example.text.styling.roundedbg"
         minSdkVersion 15
-        targetSdkVersion 32
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
     }
@@ -34,9 +34,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.android.example.text.styling.roundedbg.app'
 }
 
 dependencies {
     implementation project(':lib')
-    implementation "androidx.appcompat:appcompat:1.5.0"
+    implementation "androidx.appcompat:appcompat:1.5.1"
 }
