--- a/WindowInsetsAnimation/app/src/main/AndroidManifest.xml
+++ b/WindowInsetsAnimation/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.google.android.samples.insetsanimation">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="false"
