Updated to electric eel in InteractiveSliceProviderKotlin

--- a/InteractiveSliceProviderKotlin/app/build.gradle
+++ b/InteractiveSliceProviderKotlin/app/build.gradle
@@ -30,20 +30,23 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.5.1"
+    implementation "androidx.appcompat:appcompat:1.6.0"
     implementation "androidx.core:core-ktx:1.9.0"
 
     // The slice builder ktx library has a number of dependencies. For reference, since this is a
     // slice sample, below are a list of the slice dependencies:
     // implementation "androidx.slice:slice-core:latest-version"
     // implementation "androidx.slice:slice-builders:latest-version"
-    implementation "androidx.slice:slice-builders-ktx:1.0.0-alpha6"
+    implementation 'androidx.slice:slice-core:1.0.0'
+    implementation 'androidx.slice:slice-builders:1.0.0'
+    //noinspection GradleDependency TODO: figure out why the newer versions use `val` for header
+    implementation 'androidx.slice:slice-builders-ktx:1.0.0-alpha3'
 
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     implementation "com.google.firebase:firebase-appindexing:20.0.0"
     testImplementation "junit:junit:4.13.2"
-    androidTestImplementation "androidx.test:runner:1.5.1"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.0"
+    androidTestImplementation "androidx.test:runner:1.5.2"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
 }
 
 apply plugin: "com.google.gms.google-services"
