--- a/SliceViewerKotlin/app/build.gradle
+++ b/SliceViewerKotlin/app/build.gradle
@@ -11,8 +11,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-common:2.5.1"
     implementation "androidx.slice:slice-view:1.1.0-alpha02"
-    implementation "androidx.slice:slice-builders-ktx:1.0.0-alpha6"
-    implementation "androidx.appcompat:appcompat:1.5.1"
+    implementation 'androidx.slice:slice-core:1.0.0'
+    implementation 'androidx.slice:slice-builders:1.0.0'
+    //noinspection GradleDependency TODO: figure out why the newer versions use `val` for header
+    implementation 'androidx.slice:slice-builders-ktx:1.0.0-alpha3'
+    implementation "androidx.appcompat:appcompat:1.6.0"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.core:core-ktx:1.9.0"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
