--- a/AppShortcuts/app/build.gradle
+++ b/AppShortcuts/app/build.gradle
@@ -25,11 +25,12 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation "androidx.core:core-ktx:1.9.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 }
 repositories {
+    google()
     mavenCentral()
 }
