--- a/EmojiCompatKotlin/app/build.gradle
+++ b/EmojiCompatKotlin/app/build.gradle
@@ -46,6 +46,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
     namespace 'com.example.android.emojicompat'
 }
 
