--- a/PreferencesKotlin/app/build.gradle
+++ b/PreferencesKotlin/app/build.gradle
@@ -15,6 +15,13 @@ android {
             minifyEnabled false
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = '17'
+    }
     namespace 'com.example.androidx.preference.sample'
 }
 
