--- a/SliceViewerKotlin/app/build.gradle
+++ b/SliceViewerKotlin/app/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     implementation 'androidx.slice:slice-builders-ktx:1.0.0-alpha3'
     implementation "androidx.appcompat:appcompat:1.6.1"
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation "androidx.core:core-ktx:1.9.0"
+    implementation "androidx.core:core-ktx:1.10.0"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
@@ -31,10 +31,12 @@ android {
         versionCode 1
         versionName "1.0"
     }
-
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = '17'
     }
     namespace 'com.example.android.sliceviewer'
 }
