--- a/AndroidOnChromeOSDragAndDropDemo/app/build.gradle
+++ b/AndroidOnChromeOSDragAndDropDemo/app/build.gradle
@@ -32,6 +32,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = '17'
+    }
     namespace 'com.hadrosaur.draganddropdemo'
 }
 
@@ -45,5 +52,6 @@ dependencies {
     implementation "androidx.core:core-ktx:1.10.0"
 }
 repositories {
+    google()
     mavenCentral()
 }
