--- a/DownloadableFonts/app/build.gradle
+++ b/DownloadableFonts/app/build.gradle
@@ -24,6 +24,13 @@ android {
         implementation 'androidx.appcompat:appcompat:1.6.1'
         implementation 'com.google.android.material:material:1.8.0'
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = '17'
+    }
     namespace 'com.example.android.downloadablefonts'
 }
 dependencies {
