--- a/EmojiCompat/app/build.gradle
+++ b/EmojiCompat/app/build.gradle
@@ -38,6 +38,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
+    kotlinOptions {
+        jvmTarget = '17'
+    }
     namespace 'com.example.android.emojicompat'
     configurations.all {
         resolutionStrategy.force "com.android.support:support-annotations:26.0.0"
