Updated to AGP 8.0.1 and kotlin 1.8.20 in AndroidOnChromeOSDragAndDropDemo

--- a/AndroidOnChromeOSDragAndDropDemo/gradle/wrapper/gradle-wrapper.properties
+++ b/AndroidOnChromeOSDragAndDropDemo/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Mar 22 05:16:46 EDT 2021
+#Sun 14 May 2023 06:43:49 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
