Updated to AGP 8.0.1 and kotlin 1.8.20 in AppShortcuts

--- a/AppShortcuts/gradle/wrapper/gradle-wrapper.properties
+++ b/AppShortcuts/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Mar 23 05:56:50 EDT 2021
+#Sun 14 May 2023 07:11:39 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
