Updated AGP to 8.0.1, kotlin to 1.8.20, and gradle dependencies in DarkTheme

--- a/DarkTheme/gradle/wrapper/gradle-wrapper.properties
+++ b/DarkTheme/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Apr 06 05:55:15 EDT 2021
+#Mon 15 May 2023 07:18:03 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
