--- a/DownloadableFonts/gradle/wrapper/gradle-wrapper.properties
+++ b/DownloadableFonts/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Apr 11 07:26:29 EDT 2021
+#Mon 15 May 2023 07:49:01 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
