--- a/DownloadableFontsKotlin/app/build.gradle
+++ b/DownloadableFontsKotlin/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.android.downloadablefonts"
-        minSdkVersion 14
+        minSdkVersion 21
         targetSdkVersion 33
     }
 
@@ -22,7 +22,8 @@ android {
         implementation 'androidx.legacy:legacy-support-v13:1.0.0'
         implementation 'androidx.cardview:cardview:1.0.0'
         implementation 'androidx.appcompat:appcompat:1.6.1'
-        implementation 'com.google.android.material:material:1.8.0'
+        implementation 'com.google.android.material:material:1.9.0'
+        implementation "androidx.core:core-ktx:1.10.1"
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
@@ -35,9 +36,6 @@ android {
 }
 
 repositories {
+    google()
     mavenCentral()
 }
-dependencies {
-    implementation "androidx.core:core-ktx:1.10.0"
-}
-
