Updated AGP to 8.0.1, kotlin to 1.8.20, and gradle dependency in DragAndDropAcrossApps

--- a/DragAndDropAcrossApps/gradle/wrapper/gradle-wrapper.properties
+++ b/DragAndDropAcrossApps/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Apr 18 06:47:45 EDT 2021
+#Tue 16 May 2023 06:19:33 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
