Updated AGP to 8.0.1, kotlin to 1.8.20, and gradle dependency in EmojiCompat

--- a/EmojiCompat/gradle/wrapper/gradle-wrapper.properties
+++ b/EmojiCompat/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu Apr 29 05:41:38 EDT 2021
+#Tue 16 May 2023 07:14:59 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
