--- a/EmojiCompatKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/EmojiCompatKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat May 01 05:41:50 EDT 2021
+#Tue 16 May 2023 07:43:37 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
