--- a/InteractiveSliceProviderKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/InteractiveSliceProviderKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun May 02 07:36:14 EDT 2021
+#Tue 16 May 2023 08:14:53 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
