Updated date of gradle-wrapper.properties in DarkTheme

--- a/DarkTheme/gradle/wrapper/gradle-wrapper.properties
+++ b/DarkTheme/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Jun 18 05:23:28 EDT 2023
+#Fri 23 Jun 2023 08:16:08 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
