Updated date of gradle-wrapper.properties in AndroidOnChromeDragAndDropDemo

--- a/AndroidOnChromeOSDragAndDropDemo/gradle/wrapper/gradle-wrapper.properties
+++ b/AndroidOnChromeOSDragAndDropDemo/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri 23 Jun 2023 06:49:47 AM EDT
+#Sun Jul  9 04:27:04 EDT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
