Updated date of gradle-wrapper.properties in DragAndDropAcrossApps

--- a/DragAndDropAcrossApps/gradle/wrapper/gradle-wrapper.properties
+++ b/DragAndDropAcrossApps/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat 24 Jun 2023 08:23:45 AM EDT
+#Sun Jul  9 05:15:33 EDT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
