Updated AGP to 8.1.0 in AppWidget

--- a/AppWidget/gradle/wrapper/gradle-wrapper.properties
+++ b/AppWidget/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Jul  9 04:37:16 EDT 2023
+#Tue 01 Aug 2023 07:38:06 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-all.zip
 distributionPath=wrapper/dists
