--- a/InteractiveSliceProviderKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/InteractiveSliceProviderKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Jul 10 04:54:11 EDT 2023
+#Wed 02 Aug 2023 06:12:03 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
