--- a/SliceViewerKotlin/app/build.gradle
+++ b/SliceViewerKotlin/app/build.gradle
@@ -16,14 +16,14 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.core:core-ktx:1.10.1"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-common:2.6.1"
 }
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
     defaultConfig {
         applicationId "com.example.android.sliceviewer"
         minSdkVersion 19
