Updated AGP to 8.1.0 in TextRoundedBackgroundKotlin

--- a/TextRoundedBackgroundKotlin/app/build.gradle
+++ b/TextRoundedBackgroundKotlin/app/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'kotlin-android'
 
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.android.example.text.styling.roundedbg"
