Updated date of gradle-wrapper.properties in DragAndDropAcrossApps

--- a/DragAndDropAcrossApps/gradle/wrapper/gradle-wrapper.properties
+++ b/DragAndDropAcrossApps/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed Aug  2 04:38:07 EDT 2023
+#Tue 15 Aug 2023 07:26:12 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
