Updated date of gradle-wrapper.properties in ImmersiveMode

--- a/ImmersiveMode/gradle/wrapper/gradle-wrapper.properties
+++ b/ImmersiveMode/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed Aug  2 06:04:22 AM EDT 2023
+#Wed Aug 16 04:34:05 EDT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
