Updated AGP to 8.1.1, kotlin to 1.9.0 and targetSdkVersion to 34 in ClippingBasic

--- a/ClippingBasic/gradle/wrapper/gradle-wrapper.properties
+++ b/ClippingBasic/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue 15 Aug 2023 06:47:45 AM EDT
+#Thu Aug 31 06:16:53 EDT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
