Updated AGP to 8.1.1, kotlin to 1.9.0 and targetSdkVersion to 34 in TextRoundedBackgroundKotlin

--- a/TextRoundedBackgroundKotlin/app/build.gradle
+++ b/TextRoundedBackgroundKotlin/app/build.gradle
@@ -14,17 +14,16 @@
  * limitations under the License.
  */
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
 
-
 android {
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.android.example.text.styling.roundedbg"
         minSdkVersion 15
-        targetSdkVersion 33
+        //noinspection EditedTargetSdkVersion
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
     }
