--- a/TextRoundedBackgroundKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/TextRoundedBackgroundKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed Aug 16 05:13:40 EDT 2023
+#Fri 01 Sep 2023 06:10:15 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-all.zip
