Updated AGP to 8.1.1, kotlin to 1.9.0 and targetSdkVersion to 34 in TextStylingKotlin

--- a/TextStylingKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/TextStylingKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed Aug 16 05:33:21 EDT 2023
+#Fri 01 Sep 2023 06:27:36 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-all.zip
