Updated gradle dependency in ClippingBasic

--- a/ClippingBasic/gradle/wrapper/gradle-wrapper.properties
+++ b/ClippingBasic/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu Aug 31 06:16:53 EDT 2023
+#Tue 19 Sep 2023 06:09:13 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
