Updated gradle dependency in EmojiCompat

--- a/EmojiCompat/gradle/wrapper/gradle-wrapper.properties
+++ b/EmojiCompat/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Sep  1 04:27:17 EDT 2023
+#Wed 20 Sep 2023 05:32:57 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
