Updated AGP to 8.1.2 in ClippingBasic

--- a/ClippingBasic/gradle/wrapper/gradle-wrapper.properties
+++ b/ClippingBasic/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue 19 Sep 2023 06:09:13 AM EDT
+#Sat Oct  7 04:09:17 EDT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
