Updated AGP to 8.1.2 in PreferencesKotlin

--- a/PreferencesKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/PreferencesKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu Sep 21 03:42:04 EDT 2023
+#Sat 07 Oct 2023 07:14:04 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
