Updated date of gradle-wrapper.properties in AndroidOnChromeOSDragAndDropDemo

--- a/AndroidOnChromeOSDragAndDropDemo/gradle/wrapper/gradle-wrapper.properties
+++ b/AndroidOnChromeOSDragAndDropDemo/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat Oct  7 03:44:26 EDT 2023
+#Sun 22 Oct 2023 05:12:56 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
