Updated AGP to 8.1.3 in BasicImmersiveMode

--- a/BasicImmersiveMode/gradle/wrapper/gradle-wrapper.properties
+++ b/BasicImmersiveMode/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun 22 Oct 2023 05:39:55 AM EDT
+#Wed 08 Nov 2023 06:28:06 AM EST
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
