Updated AGP to 8.1.3 in TextRoundedBackgroundKotlin

--- a/TextRoundedBackgroundKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/TextRoundedBackgroundKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Oct 24 03:45:21 EDT 2023
+#Thu 09 Nov 2023 06:13:23 AM EST
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-all.zip
