Updated AGP to 8.1.4 and switched to org.gradle.logging.level=info in AppShortcuts

--- a/AppShortcuts/gradle/wrapper/gradle-wrapper.properties
+++ b/AppShortcuts/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed 08 Nov 2023 05:55:25 AM EST
+#Sun Nov 26 03:26:14 EST 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
