Updated AGP to 8.1.4 and switched to org.gradle.logging.level=info in AppWidget

--- a/AppWidget/gradle/wrapper/gradle-wrapper.properties
+++ b/AppWidget/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed 08 Nov 2023 06:05:05 AM EST
+#Sun Nov 26 03:31:52 EST 2023
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-all.zip
 distributionPath=wrapper/dists
