Updated date of gradle-wrapper.properties in AppShortcuts

--- a/AppShortcuts/gradle/wrapper/gradle-wrapper.properties
+++ b/AppShortcuts/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Dec 12 03:57:27 EST 2023
+#Wed 27 Dec 2023 06:42:47 AM EST
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
