Updated gradle dependency in DownloadableFontsKotlin

--- a/DownloadableFontsKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/DownloadableFontsKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue 12 Dec 2023 05:54:26 AM EST
+#Thu Dec 28 03:44:09 EST 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
