Updated gradle dependency in WindowInsetsAnimation

--- a/WindowInsetsAnimation/gradle/wrapper/gradle-wrapper.properties
+++ b/WindowInsetsAnimation/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed 13 Dec 2023 06:28:00 AM EST
+#Fri Dec 29 04:18:02 EST 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.2-all.zip
