Updated AGP to 8.2.1 and kotlin to 1.9.22 in InteractiveSliceProviderKotlin

--- a/InteractiveSliceProviderKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/InteractiveSliceProviderKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu Dec 28 04:37:58 EST 2023
+#Fri 12 Jan 2024 05:42:21 AM EST
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
