Updated AGP to 8.2.2 in AndroidOnChromeDragAndDropDemo

--- a/AndroidOnChromeOSDragAndDropDemo/gradle/wrapper/gradle-wrapper.properties
+++ b/AndroidOnChromeOSDragAndDropDemo/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu 11 Jan 2024 05:13:30 AM EST
+#Thu Jan 25 04:59:11 EST 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
