Updated AGP to 8.2.2 in TextStylingKotlin

--- a/TextStylingKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/TextStylingKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat Jan 13 04:16:46 EST 2024
+#Sat 27 Jan 2024 05:20:39 AM EST
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.2-all.zip
