Updated date of gradle-wrapper.properties in ImmersiveMode

--- a/ImmersiveMode/gradle/wrapper/gradle-wrapper.properties
+++ b/ImmersiveMode/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri 26 Jan 2024 06:05:43 AM EST
+#Sat Feb 10 04:16:56 EST 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
