Updated date of gradle-wrapper.properties in AdvancedImmersiveMode

--- a/AdvancedImmersiveMode/gradle/wrapper/gradle-wrapper.properties
+++ b/AdvancedImmersiveMode/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri 09 Feb 2024 05:30:37 AM EST
+#Fri Feb 23 03:56:36 EST 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
