Updated AGP to 8.3.1, and updated gradle dependencies in AppShortcuts

--- a/AppShortcuts/gradle/wrapper/gradle-wrapper.properties
+++ b/AppShortcuts/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat Mar  9 03:33:04 EST 2024
+#Sat 23 Mar 2024 05:32:03 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
