Updated AGP to 8.3.1 in AppWidget

--- a/AppWidget/gradle/wrapper/gradle-wrapper.properties
+++ b/AppWidget/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat Mar  9 03:42:23 EST 2024
+#Sat 23 Mar 2024 06:00:07 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.4-all.zip
 distributionPath=wrapper/dists
