Updated AGP to 8.4.1, updated kotlin to 1.9.24, and updated gradle dependencies in SliceViewerKotlin

--- a/SliceViewerKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/SliceViewerKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri May 10 04:51:16 EDT 2024
+#Tue 28 May 2024 05:11:42 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.6-all.zip
