Updated AGP to 8.5.1, and updated kotlin to 2.0.0 in TextRoundedBackgroundKotlin

--- a/TextRoundedBackgroundKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/TextRoundedBackgroundKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Jul  5 05:17:21 AM EDT 2024
+#Mon Jul 15 05:00:15 EDT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.7-all.zip
