Updated AGP to 8.9.1 and updated kotlin to 2.1.20 in PreferencesKotlin

--- a/PreferencesKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/PreferencesKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Mar 17 06:39:12 AM EDT 2025
+#Sat Mar 29 04:10:18 EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
