Updated kotlin to 2.2.10, fixed warnings, and updated gradle dependencies in AppWidget

--- a/AppWidget/gradle/wrapper/gradle-wrapper.properties
+++ b/AppWidget/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Aug  4 04:10:17 EDT 2025
+#Sat Aug 16 06:54:16 AM EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-9.0.0-all.zip
 distributionPath=wrapper/dists
